router + model fix + repo method